lab-01/app/api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blueprints-api
  namespace: blueprints
  labels:
    app: blueprints-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blueprints-api
  template:
    metadata:
      labels:
        app: blueprints-api
        app.kubernetes.io/name: blueprints-api
    spec:
      containers:
      - name: api
        image: blueprints-api
        ports:
          - name: services
            containerPort: 8080
          - name: system
            containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "200m"
      serviceAccountName: blueprints-api
      nodeSelector:
        layer: blueprints
      tolerations:
        - key: "layer"
          operator: "Equal"
          value: "blueprints"
          effect: "NoSchedule"
